packetizer: av1: fix segfault on invalid OBU

refs #21275